--- a/analysis/02_03_eQTL_statistics.ipynb
+++ b/analysis/02_03_eQTL_statistics.ipynb
@@ -102,6 +102,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## figure 1G, cell counts - eQTL counts regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "base_stat = read_delim(\"assets/ncells_cisQTL_statistics.txt\"))\n",
+    "\n",
+    "p_count_eQTL = base_stat %>% \n",
+    "  mutate(time = factor(time, levels = c(\"before\", \"after\"))) %>%\n",
+    "  rename(cluster = anno_l1) %>%\n",
+    "  ggplot(aes(x = n_cells/146, y = n_cisQTL)) + \n",
+    "  geom_point(aes(color = cluster, shape = time), size = 3.5, alpha = 0.95)+\n",
+    "  scale_x_continuous(limits = c(0,600))+\n",
+    "  scale_y_continuous(limits = c(0,1000))+\n",
+    "  scale_color_flatui()+\n",
+    "  stat_regline_equation(\n",
+    "    aes(label =  paste(after_stat(adj.rr.label))),\n",
+    "  )+\n",
+    "  xlab('Average cell count per sample')+\n",
+    "  ylab('eGene count')+\n",
+    "  theme_pubr(legend = \"right\")+\n",
+    "  theme(axis.title = element_text(size = 13))\n",
+    "\n",
+    "\n",
+    "ggsave(\"figure_prep/p_count_cell_eqtl.pdf\",p_count_eQTL, units = \"cm\", width = 12, height = 10, dpi = 300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## figure 1H, TSS distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p_TSS_distribution = df_map_cis %>% \n",
+    "  mutate(name = paste0(phenotype_id, \"_\", variant_id)) %>%\n",
+    "  group_by(name) %>%\n",
+    "  top_n(n = 1, -lfsr) %>%\n",
+    "  mutate(color = ifelse(lfsr < 0.05, \"eGene\", \"non-eGene\")) %>%\n",
+    "  distinct(phenotype_id, variant_id, start_distance, name, color) %>%\n",
+    "  ggplot(aes(x = start_distance, y = after_stat(density))) +\n",
+    "  geom_histogram(aes(fill = color), position = \"identity\", alpha = 0.8, bins = 100) +\n",
+    "  geom_density(alpha = 1, linewidth = 1) +\n",
+    "  scale_fill_manual(values = c(\"#13399d\", \"grey45\")) +\n",
+    "  facet_wrap(~color, scales = \"free_y\") +\n",
+    "  theme_pubr(legend = \"top\") +\n",
+    "  #ggtitle(\"distance distribution from each best eSNP-eGene pair\")+\n",
+    "  scale_x_continuous(breaks = c(-1e6, 0, 1e6),\n",
+    "                     label = c(\"-1Mb\", \"0\", \"1Mb\")) +\n",
+    "  theme(\n",
+    "    plot.title = element_text(size = 18, hjust = 0),\n",
+    "    axis.title = element_text(size = 16),\n",
+    "    axis.text.x = element_text(size = 14),\n",
+    "    axis.text.y = element_blank(),\n",
+    "    axis.ticks.y = element_blank(),\n",
+    "    axis.line = element_blank(),\n",
+    "    legend.text = element_text(size = 14),\n",
+    "    legend.key.size = unit(2, \"mm\"),\n",
+    "    #legend.position = \"right\",\n",
+    "    strip.background = element_rect(fill = NA),\n",
+    "    strip.text = element_text(size = 16),\n",
+    "    panel.border = element_rect(linewidth = 1, fill = NA, color = \"black\")\n",
+    "  )\n",
+    "\n",
+    "ggsave(\"figure_prep/pTSS_top_distribution.pdf\",\n",
+    "      p_TSS_distribution,\n",
+    "      units = \"cm\", dpi = 300, width = 12, height = 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## figure 2A, sharing heatmap"
    ]
   },
@@ -279,7 +371,7 @@
    "metadata": {},
    "source": [
     "## figure 2C, 2E, 3E\n",
-    "we cannot provide the source data due to privacy issue. following code was used for drawing eQTL plots."
+    "we cannot provide the source data due to individual genotypes. the following code was used for drawing eQTL plots."
    ]
   },
   {
@@ -468,6 +560,17 @@
     "#ggsave(paste0(\"visualization_eachQTL/time_dep/\", name, \"_eQTLplot.pdf\"), p_sharing,\n",
     "#       height = 15, width = (3 + 3 * length(unique(df_long_exprs$cluster_name))), units = \"cm\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
