scenic, survplot, wgcna_repl

--- a/analysis/04_02_SCENIC_visualization.ipynb
+++ b/analysis/04_02_SCENIC_visualization.ipynb
@@ -250,9 +250,147 @@
    },
    "outputs": [],
    "source": [
-    "df_cd8_MEs = read_delim(\"analysis/assets/wgcna/CD8_MEs.txt.gz\")\n",
-    "df_scenic_module_merged = left_join(df_cd8_MEs, seurat_obj_aucmtx) %>%\n",
-    "  select(cellID, anno_l1, anno_l2, brown, `TBX21(+)`, `EOMES(+)`)"
+    "df_scenic_module_merged = read_delim(\"SCENIC/TBX21_EOMES_forplot.txt.gz\", delim = \"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p_corr_plot = df_scenic_module_merged %>%\n",
+    "  filter(anno_l1 == \"CD8\") %>%\n",
+    "  pivot_longer(cols = 5:6) %>%\n",
+    "  ggplot(aes(x = brown, y = value)) +\n",
+    "  geom_hex(bins = 40) +\n",
+    "  facet_wrap(~name, ncol = 1, scales = \"free\") +\n",
+    "  scale_fill_viridis_c(option = \"rocket\", direction = -1) +\n",
+    "  stat_correlation(size = 6) +\n",
+    "  stat_poly_eq(aes(label = paste(after_stat(p.value.label))), vjust = +4, size = 6) +\n",
+    "  xlab(\"module score (CD8 brown)\") +\n",
+    "  ylab(\"Regulon activity\") +\n",
+    "  theme_pubr() +\n",
+    "  theme(\n",
+    "    legend.key.height = unit(0.2, \"cm\"),\n",
+    "    axis.title = element_text(size = 15),\n",
+    "    axis.text = element_text(size = 13),\n",
+    "    strip.background = element_rect(fill = NA, linewidth = 1),\n",
+    "    strip.text = element_text(size = 15)\n",
+    "  )\n",
+    "\n",
+    "options(repr.plot.width = 4, repr.plot.height = 8)\n",
+    "p_corr_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## figure 4G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "options(repr.plot.width = 4, repr.plot.height = 4)\n",
+    "p_comp_value = left_join(df_eachcell_module_scored, seurat_obj_aucmtx) %>%\n",
+    "  select(cellID, sample_time, anno_l1, anno_l2, `TBX21(+)`) %>%\n",
+    "  filter(anno_l1 == \"CD8\") %>%\n",
+    "  pivot_longer(cols = 5) %>%\n",
+    "  ggplot(aes(x = value, fill = anno_l2)) +\n",
+    "  geom_density(alpha = 0.5) +\n",
+    "  facet_wrap(~name, nrow = 3, scales = \"free\") +\n",
+    "  guides(fill = guide_legend(position = \"inside\")) +\n",
+    "  theme_pubr() +\n",
+    "  theme(\n",
+    "    legend.key.height = unit(0.2, \"cm\"),\n",
+    "    legend.position.inside = c(0.8, 0.8),\n",
+    "    axis.title = element_text(size = 15),\n",
+    "    axis.text.y = element_blank(),\n",
+    "    axis.text.x = element_blank(),\n",
+    "    strip.background = element_rect(fill = NA, linewidth = 1),\n",
+    "    strip.text = element_text(size = 15)\n",
+    "  )\n",
+    "p_comp_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## figure 4H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p_comp_tbx21 = left_join(df_eachcell_module_scored, seurat_obj_aucmtx) %>%\n",
+    "  select(cellID, sample, time, Response, anno_l1, anno_l2, `TBX21(+)`) %>%\n",
+    "  filter(anno_l1 == \"CD8\") %>%\n",
+    "  pivot_longer(cols = 7) %>%\n",
+    "  group_by(sample, time, Response) %>%\n",
+    "  mutate(median_tbx21 = median(value)) %>%\n",
+    "  ungroup() %>%\n",
+    "  group_by(sample, time, Response, anno_l2, median_tbx21) %>%\n",
+    "  summarise(n = n()) %>%\n",
+    "  ungroup() %>%\n",
+    "  group_by(sample, time, Response) %>%\n",
+    "  mutate(ratio = n / sum(n) * 100, key = \"CD8 TEM ratio\") %>%\n",
+    "  filter(anno_l2 == \"CD8_TEM\", time == \"base\") %>%\n",
+    "  ggplot(aes(x =median_tbx21, y = ratio)) +\n",
+    "  geom_point(aes(color = Response)) +\n",
+    "  geom_smooth(method = \"lm\") +\n",
+    "  stat_correlation(size = 6) +\n",
+    "  stat_poly_eq(aes(label = paste(after_stat(p.value.label))), vjust = +4, size = 6) +\n",
+    "  facet_wrap(~key)+\n",
+    "  theme_pubr() +\n",
+    "  xlab(\"median TBX21 regulon activity\") +\n",
+    "  ylab(\"CD8 TEM ratio\") +\n",
+    "  guides(color = guide_legend(position = \"inside\")) +\n",
+    "  theme(\n",
+    "    legend.position.inside = c(0.8, 0.2),\n",
+    "    axis.title = element_text(size = 15),\n",
+    "    axis.text.y = element_text(size = 13),\n",
+    "    strip.background = element_rect(fill = NA, linewidth = 1),\n",
+    "    strip.text = element_text(size = 15)\n",
+    "  )\n",
+    "  options(repr.plot.width = 4, repr.plot.height = 4)\n",
+    "  p_comp_tbx21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "options(repr.plot.width = 8, repr.plot.height = 8)\n",
+    "(p_corr_plot + (p_comp_value /  p_comp_tbx21)) %>%\n",
+    "  ggsave(\"figure_prep/pSCENIC_corr_value_gathered.pdf\", ., width = 8, height = 8, dpi = 300)"
    ]
   }
  ],
