--- a/analysis/04_03_Survival_analysis.ipynb
+++ b/analysis/04_03_Survival_analysis.ipynb
@@ -10,9 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "vlib =  c(\"tidyverse\", \"ggpubr\", \"arrow\", \"ComplexHeatmap\", \"Seurat\",\n",
-    "         \"tidyseurat\", \"enrichR\", \"ComplexHeatmap\", , \"enrichR\",\n",
-    "         \"presto\", \"patchwork\", \"ggpmisc\", \"ggrepel\", \"broom\", \"viridis\")\n",
+    "vlib =  c(\"tidyverse\", \"ggpubr\", \"survminer\", \"survival\", \"broom\", \"ggsci\")\n",
     "lapply(vlib, require, character.only = TRUE, quietly = TRUE) |> suppressMessages()\n",
     "\n",
     "base_dir = \".\"\n",
@@ -121,11 +119,110 @@
     "pdf(\"figure_prep/p_surv_CD8_TEM_OS.pdf\", width = 5, height =7)\n",
     "p2; dev.off()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## figure 4K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_CD8_MEs = read_delim(\"./assets/wgcna/CD8_MEs.txt.gz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_binary_ratio = df_CD8_MEs %>%\n",
+    "  group_by(sample, time) %>%\n",
+    "  mutate(binary_brown = ifelse(brown > 1.4, \"high\", \"low\")) %>%\n",
+    "  group_by(sample, time, binary_brown) %>%\n",
+    "  summarise(n = n()) %>%\n",
+    "  pivot_wider(names_from = binary_brown, values_from = n) %>%\n",
+    "  mutate(ratio = high / (high + low))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_CD8_proportion = df_CD8_MEs %>%\n",
+    "  group_by(sample, time, anno_l2) %>%\n",
+    "  summarise(n = n()) %>%\n",
+    "  left_join(df_binary_ratio) %>%\n",
+    "  mutate(surv_cat = ifelse(ratio > 0.7, \"High\", \"Low\"))\n",
+    "\n",
+    "p1 = df_CD8_proportion %>%\n",
+    "  filter(time == \"base\") %>%\n",
+    "  mutate(time = \"Baseline\") %>%\n",
+    "  ggplot(aes(x = sample, y = n, fill = anno_l2)) +\n",
+    "    geom_bar(position = \"fill\", stat = \"identity\") +\n",
+    "    facet_grid(time~surv_cat, scales = \"free\", space = \"free\", switch = \"y\") +\n",
+    "    scale_fill_simpsons() +\n",
+    "    scale_y_continuous(position = \"right\") +\n",
+    "    ylab(\"Proportion\") +\n",
+    "    theme_pubr() +\n",
+    "    theme(axis.text.x = element_blank(),\n",
+    "       axis.title.x = element_blank())\n",
+    "\n",
+    "p2 = df_CD8_proportion %>%\n",
+    "  filter(time == \"1st\") %>%\n",
+    "  mutate(time = \"Treatment\") %>%\n",
+    "  ggplot(aes(x = sample, y = n, fill = anno_l2)) +\n",
+    "    geom_bar(position = \"fill\", stat = \"identity\") +\n",
+    "    facet_grid(time~surv_cat, scales = \"free\", space = \"free\", switch = \"y\") +\n",
+    "    scale_fill_simpsons() +\n",
+    "    scale_y_continuous(position = \"right\") +\n",
+    "    ylab(\"Proportion\") +\n",
+    "    theme_pubr(legend = \"none\") +\n",
+    "    theme(axis.text.x = element_blank())\n",
+    "\n",
+    "\n",
+    "p1/p2 & \n",
+    "  theme(\n",
+    "    strip.background = element_rect(fill = NA),\n",
+    "    strip.text = element_text(size = 12),\n",
+    "    legend.key.width = unit(12, \"pt\")\n",
+    "  )"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.3.3"
   }
  },
  "nbformat": 4,
