--- a/analysis/04_04_WGCNA_replication.ipynb
+++ b/analysis/04_04_WGCNA_replication.ipynb
@@ -2,13 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“replacing previous import ‘Seurat::components’ by ‘igraph::components’ when loading ‘hdWGCNA’”\n",
+      "Warning message:\n",
+      "“replacing previous import ‘Matrix::as.matrix’ by ‘proxy::as.matrix’ when loading ‘hdWGCNA’”\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<ol>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "\t<li>TRUE</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate}\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\item TRUE\n",
+       "\\end{enumerate}\n"
+      ],
+      "text/markdown": [
+       "1. TRUE\n",
+       "2. TRUE\n",
+       "3. TRUE\n",
+       "4. TRUE\n",
+       "5. TRUE\n",
+       "6. TRUE\n",
+       "7. TRUE\n",
+       "8. TRUE\n",
+       "9. TRUE\n",
+       "10. TRUE\n",
+       "11. TRUE\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[[1]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[2]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[3]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[4]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[5]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[6]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[7]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[8]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[9]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[10]]\n",
+       "[1] TRUE\n",
+       "\n",
+       "[[11]]\n",
+       "[1] TRUE\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vlib = c(\"tidyverse\", \"ggpubr\", \"patchwork\", \"tidyseurat\", \"future.apply\",\n",
     "   \"arrow\", \"pheatmap\", \"ggrastr\",  \"Seurat\", \"hdWGCNA\", \"ggsci\")\n",
@@ -133,13 +229,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m12\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m21\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \"\\t\"\n",
+      "\u001b[31mchr\u001b[39m  (1): color\n",
+      "\u001b[32mdbl\u001b[39m (20): moduleSize, Zsummary.qual, Z.propVarExplained.qual, Z.meanSignAwar...\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    }
+   ],
    "source": [
     "mod_pres = read_delim(\"assets/wgcna/replication_modpres.txt.gz\", delim = \"\\t\")"
    ]
@@ -279,17 +390,6 @@
     }
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
    "source": [
     "options(repr.plot.width = 8, repr.plot.height = 5, repr.plot.res = 200)\n",
     "pmod_pres = mod_pres %>%\n",
@@ -320,8 +420,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.3.3"
   }
  },
  "nbformat": 4,
